--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,6 +7,6 @@
   "trailingComma": "all",
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "proseWrap": "preserve"
 }
