--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write ."
   },
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.1.12",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
