--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "test": "vitest --no-watch",
-    "e2e": "cypress run"
+    "e2e": "cypress run",
+    "ci:test": "vitest --no-watch && start-server-and-test dev http-get://0.0.0.0:5173 e2e"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -52,6 +53,7 @@
     "jsdom": "^23.0.1",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
+    "start-server-and-test": "^2.0.5",
     "tailwindcss": "^3.4.7",
     "vite": "^5.3.4",
     "vitest": "^2.0.5"
